--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p>
                       I am an applied scientist at Microsoft, where I work on
                       natural language generation for the <a href="https://www.microsoft.com/en-us/health-solutions/clinical-workflow/dragon-copilot">Microsoft Dragon Copilot</a>. 
-                    Previously, I was a data scientist at
+                    Prior to this, I was a data scientist at
                       <a href="https://www.iais.fraunhofer.de"
                         >Fraunhofer IAIS</a
                       >
@@ -57,7 +57,7 @@
                       >. 
                     </p>
                     
-                    <p> I completed my PhD in the
+                    <p> I did my PhD in the
                       <a href="https://www.ai.cs.tu-dortmund.de"
                         >Artificial Intelligence Group at the Technical
                         University of Dortmund</a
@@ -66,7 +66,7 @@
                         href="https://ai.cs.tu-dortmund.de/staff/harmeling-lab/prof-dr-stefan-harmeling/"
                         >Prof. Dr. Stefan Harmeling</a
                       >.
-                      I obtained my Bachelor's and Master's degrees in computer
+                      I acquired my Bachelor's and Master's degrees in computer
                       science with a minor in mathematics from the
                       <a href="https://cs.hhu.de"
                         >Heinrich Heine University Düsseldorf</a
